# karyotypic_analysis

./: .gitignore  LICENSE  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
.docker/: Dockerfile
frontend/: .gitignore  Dockerfile  package-lock.json  package.json
frontend/UI_Guide/: UserGuide.md
frontend/src/: App.css  App.js  index.js
frontend/src/components/: Auth.js  BosDrawer.js  BoxDrawer.js  DeleteNotebook.js  ImageUploader.js  Login.js  MarkdownEditor.js  NotebookDetail.js  Profile.js  Registration.js  SaveResults.js  SavedNotebooks.js  Title.js  UpdateNotebook.js
karyotypic-analysis/: alembic.ini
karyotypic-analysis/ml_service/: Dockerfile  README.md  celery_app.py  main.py  requirements.txt
karyotypic-analysis/ml_service/ml/: YOLOv10.py  models.py  router.py  tasks.py  utils.py
karyotypic-analysis/user_service/: Dockerfile  README.md  application.py  database.py  main.py  models.py  requirements.txt  utils.py  wait-for-db.sh
karyotypic-analysis/user_service/alembic/: env.py
karyotypic-analysis/user_service/alembic/versions/: 6a8904ca6b6d_image_bytes.py  cbd6504d75c8_initial_revision.py
karyotypic-analysis/user_service/auth/: router.py  utils.py
karyotypic-analysis/user_service/notebooks/: router.py  schemas.py
karyotypic-analysis/user_service/users/: router.py  schemas.py
karyotypic_analysis/: celery_app.py  main.py
karyotypic_analysis/ml/: YOLOv10.py  models.py  router.py  tasks.py  utils.py
