[project]
name = "karyotypic-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Tahionnn",email = "81324335+Tahionnn@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "onnx (>=1.17.0,<2.0.0)",
    "onnxruntime (>=1.20.1,<2.0.0)",
    "numpy (>=2.2.1,<3.0.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
